improve error handling

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 APP_NAME=
 APP_SECRET=
-DEBUG_MODE=true
+DEBUG_MODE=false
 AUTH_ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRY=1800
+
+ALLOWED_ORIGINS=*
+ALLOW_CREDENTIALS=true
+ALLOWED_METHODS=*
+ALLOWED_HEADERS=*
