--- a/alembic.ini
+++ b/alembic.ini
@@ -9,7 +9,7 @@ script_location = %(here)s/alembic
 
 sqlalchemy.url = sqlite:///./test.db
 
-file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s
+file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
 # Logging configuration
 [loggers]
