--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 APP_NAME=
+APP_ENV=local
 APP_SECRET=
-DEBUG_MODE=false
-AUTH_ALGORITHM="HS256"
-ACCESS_TOKEN_EXPIRY=1800
+APP_DEBUG=false
 
-ALLOWED_ORIGINS=*
+DB_CONNECTION=
+
+AUTH_ALGORITHM=HS256
+AUTH_TOKEN_EXPIRY=1800
+
+ALLOW_ORIGINS=*
 ALLOW_CREDENTIALS=true
-ALLOWED_METHODS=*
-ALLOWED_HEADERS=*
+ALLOW_METHODS=*
+ALLOW_HEADERS=*
