--- a/alembic.ini
+++ b/alembic.ini
@@ -7,7 +7,7 @@
 # file.
 script_location = %(here)s/alembic
 
-sqlalchemy.url = sqlite:///./test.db
+sqlalchemy.url = %(DB_CONNECTION)s
 
 file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
