--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,18 @@ name = "fastapi-template"
 version = "0.1.0"
 description = ""
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "alembic>=1.16.1",
-    "passlib>=1.7.4",
+    "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.9.1",
     "pyjwt>=2.10.1",
-    "sqlalchemy>=2.0.41",
+    "sqlalchemy[asyncio]>=2.0.41",
     "uvicorn>=0.34.2",
+    "psycopg-binary>=3.2.9",
+    "psycopg>=3.2.9",
+    "python-dateutil>=2.9.0.post0",
 ]
 
 [dependency-groups]
@@ -31,3 +34,6 @@ max-line-length = 88
 [tool.pylint.'MESSAGES CONTROL']
 disable = 'missing-function-docstring,missing-class-docstring,missing-module-docstring,too-few-public-methods'
 
+[tool.pylint."DESIGN"]
+max-args = 7
+max-positional-arguments = 7
