--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "psycopg-binary>=3.2.9",
     "psycopg>=3.2.9",
     "python-dateutil>=2.9.0.post0",
+    "aiosqlite>=0.21.0",
 ]
 
 [dependency-groups]
@@ -22,6 +23,7 @@ dev = [
     "mypy>=1.15.0",
     "pylint>=3.3.7",
     "pytest>=8.3.5",
+    "pytest-asyncio>=1.0.0",
     "ruff>=0.11.11",
 ]
 
