add password reset and email templates

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 APP_NAME=
+APP_URL=http://localhost
 APP_ENV=local
 APP_SECRET=
 APP_DEBUG=false
@@ -7,8 +8,22 @@ DB_CONNECTION=
 
 AUTH_ALGORITHM=HS256
 AUTH_TOKEN_EXPIRY=1800
+AUTH_PASSWORD_RESET_EXPIRY=600
 
 ALLOW_ORIGINS=*
 ALLOW_CREDENTIALS=true
 ALLOW_METHODS=*
 ALLOW_HEADERS=*
+
+EMAIL_HOST=
+EMAIL_PORT=587
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_TLS=true
+EMAIL_FROM_ADDRESS=info@example.com
+EMAIL_FROM_NAME=
+
+TEMPLATE_PATH=./src/templates
+
+FRONTEND_URL=http://localhost:8000
+
