--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,17 @@ dependencies = [
     "psycopg>=3.2.9",
     "python-dateutil>=2.9.0.post0",
     "aiosqlite>=0.21.0",
+    "itsdangerous>=2.2.0",
 ]
 
 [dependency-groups]
 dev = [
+    "aiosmtpd>=1.4.6",
     "mypy>=1.15.0",
     "pylint>=3.3.7",
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
+    "pytest-mock>=3.14.1",
     "ruff>=0.11.11",
 ]
 
@@ -36,4 +39,4 @@ disallow_untyped_defs = true
 max-line-length = 88
 
 [tool.pylint."MESSAGES CONTROL"]
-disable = 'missing-function-docstring,missing-class-docstring,missing-module-docstring'
+disable = "missing-function-docstring,missing-class-docstring,missing-module-docstring"
