add token refresh and logout

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,29 +1,29 @@
-APP_NAME=
-APP_URL=http://localhost
+APP_NAME=FastAPI
+APP_URL=http://localhost:8000
 APP_ENV=local
 APP_SECRET=
-APP_DEBUG=false
+APP_DEBUG=true
 
-DB_CONNECTION=
+DB_CONNECTION=postgresql+psycopg://username:password@localhost:5432/mydb
 
 AUTH_ALGORITHM=HS256
-AUTH_TOKEN_EXPIRY=1800
+AUTH_ACCESS_TOKEN_EXPIRY=3600
+AUTH_REFRESH_TOKEN_EXPIRY=1296000
 AUTH_PASSWORD_RESET_EXPIRY=600
 
-ALLOW_ORIGINS=*
+ALLOW_ORIGINS=http://localhost:3000
 ALLOW_CREDENTIALS=true
 ALLOW_METHODS=*
 ALLOW_HEADERS=*
 
-EMAIL_HOST=
-EMAIL_PORT=587
+EMAIL_HOST=localhost
+EMAIL_PORT=8025
 EMAIL_USER=
 EMAIL_PASSWORD=
-EMAIL_TLS=true
-EMAIL_FROM_ADDRESS=info@example.com
-EMAIL_FROM_NAME=
+EMAIL_TLS=false
+EMAIL_FROM_ADDRESS=info@example.org
+EMAIL_FROM_NAME="FastAPI App"
 
 TEMPLATE_PATH=./src/templates
 
-FRONTEND_URL=http://localhost:8000
-
+FRONTEND_URL=http://localhost:3000
