--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,4 @@ EMAIL_FROM_NAME="FastAPI App"
 TEMPLATE_PATH=./src/templates
 
 FRONTEND_URL=http://localhost:3000
+FRONTEND_PASSWORD_RESET_PATH=reset
