--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.9",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
