--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,7 @@ APP_DEBUG=true
 
 DB_CONNECTION=postgresql+psycopg://username:password@localhost:5432/mydb
 
+AUTH_ENABLED=false
 AUTH_ALGORITHM=HS256
 AUTH_ACCESS_TOKEN_EXPIRY=3600
 AUTH_REFRESH_TOKEN_EXPIRY=1296000
