improved password flow

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,4 +28,4 @@ EMAIL_FROM_NAME="FastAPI App"
 TEMPLATE_PATH=./src/templates
 
 FRONTEND_URL=http://localhost:3000
-FRONTEND_PASSWORD_RESET_PATH=reset
+FRONTEND_PASSWORD_RESET_PATH=reset-password?token=
