--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-dateutil>=2.9.0.post0",
     "aiosqlite>=0.21.0",
     "itsdangerous>=2.2.0",
+    "argon2-cffi>=25.1.0",
 ]
 
 [dependency-groups]
